@@ -10,56 +10,44 @@ import org.eclipse.cargotracker.domain.model.location.Location;
 
 import java.io.Serializable;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
 @Embeddable
-public class Itinerary implements Serializable {
-
-    // Null object pattern.
-    public static final Itinerary EMPTY_ITINERARY = new Itinerary();
-    private static final long serialVersionUID = 1L;
-
-    // TODO [Clean Code] Look into why cascade delete doesn't work.
-    // Hibernate issue:
-    // Changes applied according to WildFly/Hibernate requirements.
-    // The `orphanRemoval = true` option will causes a `all-delete-orphan` exception under
-    // WildFly/Hibernate.
-    // (There is a famous lazy initialization exception you could encounter WildFly/Hibernate.
-    // The `fetch = FetchType.EAGER` fixes the Hibernate lazy initialization exception
-    // but maybe cause bad performance. A good practice is accessing the one-to-many relations
-    // in a session/tx boundary)
-    //
-    // @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
+public record Itinerary(
+    /**
+     * The legs of the itinerary.
+     * Hibernate issue:
+     * - Cascade delete doesn't work with `orphanRemoval = true` under WildFly/Hibernate.
+     * - `OrderColumn` persists the position of list elements in the database.
+     * - `@OrderBy` ensures the order of list elements in memory but may not work in all cases.
+     */
     @OneToMany(cascade = CascadeType.ALL)
     @JoinColumn(name = "cargo_id")
-    // TODO [Clean Code] Index this is in leg_index
-    // Hibernate issue:
-    // Hibernate does not persist the order of the list element when saving into db.
-    // The `OrderColumn` will persist the position of list elements in db.
     @OrderColumn(name = "leg_index")
-    // The `OrderBy` only ensures the order of list elements in memory. Only `@OrderBy("loadTime")`
-    // is added some tests are still failed under WildFly/Hibernate.
-    // @OrderBy("loadTime")
     @Size(min = 1)
     @NotEmpty(message = "Legs must not be empty")
-    private List<Leg> legs = Collections.emptyList();
+    List<Leg> legs
+) implements Serializable {
 
-    public Itinerary() {
-        // Nothing to initialize.
-    }
+    public static final Itinerary EMPTY_ITINERARY = new Itinerary(Collections.emptyList());
+    private static final long serialVersionUID = 1L;
 
-    public Itinerary(List<Leg> legs) {
-        Validate.notEmpty(legs);
-        Validate.noNullElements(legs);
-
-        this.legs = legs;
+    public Itinerary {
+        Objects.requireNonNull(legs, "Legs must not be null");
+        if (legs.isEmpty()) {
+            throw new IllegalArgumentException("Legs must not be empty");
+        }
+        if (legs.stream().anyMatch(Objects::isNull)) {
+            throw new IllegalArgumentException("Legs must not contain null elements");
+        }
+        legs = Collections.unmodifiableList(new ArrayList<>(legs));
     }
 
     public List<Leg> legs() {
-        // this.legs.sort(Comparator.comparing(Leg::getLoadTime));
-        return Collections.unmodifiableList(this.legs);
+        return legs;
     }
 
     /** Test if the given handling event is expected when executing this itinerary. */
@@ -135,7 +123,7 @@ public class Itinerary implements Serializable {
         if (legs.isEmpty()) {
             return null;
         } else {
-            return legs.getLast();
+            return legs.get(legs.size() - 1);
         }
     }
 
